--- a/datahub-ui/example/index.html
+++ b/datahub-ui/example/index.html
@@ -1251,91 +1251,91 @@
     // maps
     ////////////////////////////////////////
 
-    // datahub.data.setApiKey('0f58fe2540fa4cf19a4aa68f290fd148')
+    datahub.data.setApiKey('0f58fe2540fa4cf19a4aa68f290fd148')
 
-    // datahub.map.rasterMap({
-    //         parent: document.querySelector('.map-light'),
-    //         showLabels: false,
-    //         mapConfig: {
-    //             zoomControl: false
-    //         },
-    //         showTooltip: false
-    //     })
-    //     .init()
+    datahub.map.rasterMap({
+            parent: document.querySelector('.map-light'),
+            showLabels: false,
+            mapConfig: {
+                zoomControl: false
+            },
+            showTooltip: false
+        })
+        .init()
 
-    // datahub.map.rasterMap({
-    //         parent: document.querySelector('.map-dark'),
-    //         basemapName: 'basemapLight',
-    //         showLabels: false,
-    //         mapConfig: {
-    //             zoomControl: false
-    //         },
-    //         showTooltip: false
-    //     })
-    //     .init()
+    datahub.map.rasterMap({
+            parent: document.querySelector('.map-dark'),
+            basemapName: 'basemapLight',
+            showLabels: false,
+            mapConfig: {
+                zoomControl: false
+            },
+            showTooltip: false
+        })
+        .init()
 
-    // var datasetName = 'noaa_gfs_global_sflux_0.12d'
-    // var variableName = 'Temperature_hybrid'
-    // datahub.data.getPreview(datasetName, variableName, null, function(response) {
-    //     rasterMap.renderRaster(response.json)
-    //     rasterMapGrayscale.renderRaster(response.json)
-    // })
+    var datasetName = 'noaa_gfs_global_sflux_0.12d'
+    var variableName = 'Temperature_hybrid'
+    datahub.data.getPreview(datasetName, variableName, null, function(response) {
+        rasterMap.renderRaster(response.json)
+        rasterMapGrayscale.renderRaster(response.json)
+    })
 
-    // var rasterMap = datahub.map.rasterMap({
-    //         parent: document.querySelector('.map-grayscale'),
-    //         colorScale: datahub.palette.grayscale,
-    //         showLabels: false,
-    //         mapConfig: {
-    //             zoomControl: false
-    //         },
-    //         showTooltip: false
-    //     })
-    //     .init()
+    var rasterMap = datahub.map.rasterMap({
+            parent: document.querySelector('.map-grayscale'),
+            colorScale: datahub.palette.grayscale,
+            showLabels: false,
+            mapConfig: {
+                zoomControl: false
+            },
+            showTooltip: false
+        })
+        .init()
 
-    // var rasterMapGrayscale = datahub.map.rasterMap({
-    //         parent: document.querySelector('.map-rainbow'),
-    //         colorScale: datahub.palette.equalizedSpectral,
-    //         showLabels: false,
-    //         mapConfig: {
-    //             zoomControl: false
-    //         },
-    //         showTooltip: false
-    //     })
-    //     .init()
+    var rasterMapGrayscale = datahub.map.rasterMap({
+            parent: document.querySelector('.map-rainbow'),
+            colorScale: datahub.palette.equalizedSpectral,
+            showLabels: false,
+            mapConfig: {
+                zoomControl: false
+            },
+            showTooltip: false
+        })
+        .init()
 
-    // datahub.data.getJSON('../asset/gfs_data.json', function(error, json) {
-    //     rasterMapBig.renderRaster(json)
-    //     colorLegend.setData(json.uniqueValues)
-    // })
+    datahub.data.getJSON('../asset/gfs_data.json', function(error, json) {
+        rasterMapBig.renderRaster(json)
+        colorLegend.setData(json.uniqueValues)
+    })
 
-    // var rasterMapBig = datahub.map.rasterMap({
-    //         parent: document.querySelector('.map-raster'),
-    //         colorScale: datahub.palette.equalizedSpectral
-    //     })
-    //     .init()
-    //     .renderVectorMap()
+    var rasterMapBig = datahub.map.rasterMap({
+            parent: document.querySelector('.map-raster'),
+            colorScale: datahub.palette.equalizedSpectral
+        })
+        .init()
+        .renderVectorMap()
 
-    // var pointsGeojson = datahub.data.generateGeojsonPoints()
+    var pointsGeojson = datahub.data.generateGeojsonPoints()
 
-    // var vectorMap = datahub.map.rasterMap({
-    //         parent: document.querySelector('.map-vector')
-    //     })
-    //     .init()
-    //     .renderPolygon(pointsGeojson)
+    var vectorMap = datahub.map.rasterMap({
+            parent: document.querySelector('.map-vector')
+        })
+        .init()
+        .renderPolygon(pointsGeojson)
 
-    // datahub.data.getWorldVector(function(geojson) {
-    //     vectorMap.renderPolygon(geojson)
-    // })
+    datahub.data.getWorldVector(function(geojson) {
+        vectorMap.renderPolygon(geojson)
+    })
 
-    // datahub.map.selectorMap({
-    //     parent: document.querySelector('.map-selector')
-    // })
+    datahub.map.selectorMap({
+        parent: document.querySelector('.map-selector')
+    })
 
-    // var colorLegend = datahub.colorLegend({
-    //     parent: document.querySelector('.map-legend'),
-    //     height: 50,
-    //     colorScale: datahub.palette.equalizedSpectral
-    // })
+    var colorLegend = datahub.colorLegend({
+        parent: document.querySelector('.map-legend'),
+        height: 50,
+        colorScale: datahub.palette.equalizedSpectral
+    })
 
     </script>
 </body>
